# mabel

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel-app  buildifier.bzl  codecov.yml  init_deps.bzl  init_rules.bzl  temp.sh
examples/android/: MODULE.bazel  WORKSPACE  bazel-android
examples/android-kotlin/program/: BUILD.bazel  HelloActivity.java  StringFormat.kt  g_artifact.bzl
examples/android-kotlin/program/main_deps/: BUILD.bazel  dependencies.bzl
examples/android-kotlin/program/res/values/: strings.xml
examples/android/program/: AndroidManifest.xml  BUILD.bazel  HelloActivity.java  aar_import_replacement.bzl  g_artifact.bzl  maven_install.json
examples/android/program/main_deps/: BUILD.bazel  dependencies.bzl
examples/android/program/res/layout/: main_activity.xml
examples/java_plugin/: .bazelrc  MODULE.bazel  WORKSPACE  bazel-java_plugin
examples/java_plugin/program/: BUILD.bazel  HelloWorld.java  Program.java  dependencies.txt  maven_install.json
examples/java_plugin/program/main_deps/: BUILD.bazel  dependencies.bzl  dependencies.txt
examples/kotlin/: .bazelrc copy  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  bazel-kotlin
examples/kotlin/program/: BUILD.bazel  HelloWorld.kt  maven_install.json
examples/kotlin/program/main_deps/: BUILD.bazel  dependencies.bzl
examples/plain_java/: MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod
examples/plain_java/program/: BUILD.bazel  HelloWorld.java  maven_install.json
examples/plain_java/program/main_deps/: BUILD.bazel  dependencies.bzl
examples/plain_java/program/main_deps/aopalliance/aopalliance/: BUILD.bazel
examples/plain_java/program/main_deps/commons-codec/commons-codec/: BUILD.bazel
examples/plain_java/program/main_deps/commons-io/commons-io/: BUILD.bazel
examples/plain_java/program/main_deps/commons-logging/commons-logging/: BUILD.bazel
others/migration-tooling/: BUILD.bazel  dependencies.bzl
others/migration-tooling/generate_workspace/: BUILD.bazel
resolver/: BUILD.bazel  bazel_mvn_deps_dependencies.bzl  maven_install.json
resolver/bazel_mvn_deps/com/beust/jcommander/: BUILD.bazel
resolver/bazel_mvn_deps/com/google/guava/guava/: BUILD.bazel
resolver/bazel_mvn_deps/com/kohlschutter/junixsocket/junixsocket-common/: BUILD.bazel
resolver/bazel_mvn_deps/com/kohlschutter/junixsocket/junixsocket-native-common/: BUILD.bazel
resolver/bazel_mvn_deps/commons-codec/commons-codec/: BUILD.bazel
resolver/bazel_mvn_deps/commons-logging/commons-logging/: BUILD.bazel
resolver/bazel_mvn_deps/junit/junit/: BUILD.bazel
resolver/bazel_mvn_deps/log4j/log4j/: BUILD.bazel
resolver/bazel_mvn_deps/net/bytebuddy/byte-buddy/: BUILD.bazel
resolver/bazel_mvn_deps/net/bytebuddy/byte-buddy-agent/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/commons/commons-lang3/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/httpcomponents/httpclient/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/httpcomponents/httpcore/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/maven/maven-aether-provider/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/maven/maven-artifact/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/maven/maven-model/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/maven/maven-model-builder/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/maven/maven-repository-metadata/: BUILD.bazel
resolver/bazel_mvn_deps/org/apache/openejb/javaee-api/: BUILD.bazel
resolver/bazel_mvn_deps/org/codehaus/plexus/plexus-component-annotations/: BUILD.bazel
resolver/bazel_mvn_deps/org/codehaus/plexus/plexus-interpolation/: BUILD.bazel
resolver/bazel_mvn_deps/org/codehaus/plexus/plexus-utils/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-api/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-connector-basic/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-impl/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-spi/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-transport-classpath/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-transport-file/: BUILD.bazel
resolver/bazel_mvn_deps/org/eclipse/aether/aether-transport-http/: BUILD.bazel
resolver/bazel_mvn_deps/org/hamcrest/hamcrest-core/: BUILD.bazel
resolver/bazel_mvn_deps/org/mockito/mockito-core/: BUILD.bazel
resolver/bazel_mvn_deps/org/objenesis/objenesis/: BUILD.bazel
resolver/bazel_mvn_deps/org/scijava/native-lib-loader/: BUILD.bazel
resolver/bazel_mvn_deps/org/slf4j/jcl-over-slf4j/: BUILD.bazel
resolver/bazel_mvn_deps/org/slf4j/slf4j-api/: BUILD.bazel
resolver/main_deps/: BUILD.bazel  dependencies.bzl
resolver/main_deps/com/beust/jcommander/: BUILD.bazel
resolver/main_deps/commons-codec/commons-codec/: BUILD.bazel
resolver/main_deps/commons-logging/commons-logging/: BUILD.bazel
resolver/main_deps/junit/junit/: BUILD.bazel
resolver/main_deps/log4j/log4j/: BUILD.bazel
resolver/main_deps/net/bytebuddy/byte-buddy/: BUILD.bazel
resolver/main_deps/net/bytebuddy/byte-buddy-agent/: BUILD.bazel
resolver/main_deps/org/antlr/antlr4-runtime/: BUILD.bazel
resolver/main_deps/org/checkerframework/checker-qual/: BUILD.bazel
resolver/main_deps/org/hamcrest/hamcrest-core/: BUILD.bazel
resolver/main_deps/org/jgrapht/jgrapht-core/: BUILD.bazel
resolver/main_deps/org/jgrapht/jgrapht-io/: BUILD.bazel
resolver/main_deps/org/jheaps/jheaps/: BUILD.bazel
resolver/main_deps/org/mockito/mockito-core/: BUILD.bazel
resolver/main_deps/org/objenesis/objenesis/: BUILD.bazel
resolver/main_deps/org/scijava/native-lib-loader/: BUILD.bazel
resolver/main_deps/org/slf4j/jcl-over-slf4j/: BUILD.bazel
resolver/main_deps/org/slf4j/slf4j-api/: BUILD.bazel
resolver/main_deps/org/slf4j/slf4j-nop/: BUILD.bazel
resolver/src/main/proto/: api.proto
resolver/src/test/resources/: mockk-1.0-for-android.aar
rules/: mabel.bzl  (+3 more)
rules/jvm_import/: AddJarManifestEntry.java  BUILD.bazel  ByteStreams.java  jvm_import.bzl  stamp_manifest.bzl
tools/: BUILD.bazel  checkstyle.xml  linters.bzl
(+340 files in other folders)
