# Taken from https://raw.githubusercontent.com/bazelbuild/migration-tooling/
# Includes many changes
load("//resolver/main_deps:dependencies.bzl", "generate_transitive_dependency_targets")

generate_transitive_dependency_targets()

load("@rules_java//java:defs.bzl", "java_library")
load("//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")

mabel_rule(
    name = "main_deps",
    maven_deps = [
        artifact("com.google.guava:guava:27.0.1-jre"),
        artifact("org.apache.commons:commons-lang3:jar:3.8.1"),
        artifact("com.google.code.findbugs:jsr305:3.0.2"),

        #command-line arguments parsing
        artifact("com.beust:jcommander:1.72"),

        #POM management
        artifact("org.eclipse.aether:aether-api:1.1.0"),
        artifact("org.eclipse.aether:aether-spi:1.1.0"),
        artifact("org.eclipse.aether:aether-impl:1.1.0"),
        artifact("org.eclipse.aether:aether-util:1.1.0"),
        artifact("org.eclipse.aether:aether-transport-http:1.1.0"),
        artifact("org.eclipse.aether:aether-transport-classpath:1.1.0"),
        artifact("org.eclipse.aether:aether-transport-wagon:1.1.0"),
        artifact("org.eclipse.aether:aether-transport-file:1.1.0"),
        artifact("org.eclipse.aether:aether-connector-basic:1.1.0"),
        artifact("org.apache.maven:maven-aether-provider:3.2.3"),
        artifact("org.apache.maven:maven-model:3.2.3"),
        artifact("org.apache.maven:maven-model-builder:3.2.3"),
        artifact("org.apache.maven:maven-repository-metadata:3.2.3"),
        artifact("org.apache.maven:maven-artifact:3.5.0"),
        artifact("org.codehaus.plexus:plexus-interpolation:1.24"),
        artifact("org.codehaus.plexus:plexus-utils:3.0.24"),
        artifact("org.apache.httpcomponents:httpcore:4.4.6"),
        artifact("org.apache.httpcomponents:httpclient:4.5.3"),

        #model classes
        artifact("com.google.auto.value:auto-value-annotations:1.7"),
        artifact("com.google.auto.value:auto-value:1.7"),
        #for creating and reading json
        artifact("com.google.code.gson:gson:2.8.5"),

        #logging - nop
        artifact("org.slf4j:slf4j-nop:1.7.25"),

        #testing
        artifact("junit:junit:4.12"),
        artifact("org.mockito:mockito-core:2.23.4"),
    ],
    public_targets_category = "requested_deps",
)

java_library(
    name = "api_model",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/api/model/*.java"]),
    deps = [
        "//resolver/main_deps/com/google/auto/value/auto-value:processors",
        "//resolver/main_deps/com/google/auto/value/auto-value-annotations",
    ],
)

java_library(
    name = "serialization",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/api/serialization/*.java"]),
    deps = [
        ":api_model",
        "//resolver/main_deps/com/google/code/gson/gson",
    ],
)

java_test(
    name = "serialization_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/api/serialization/SerializationTest.java"],
    test_class = "net.evendanan.bazel.mvn.api.serialization.SerializationTest",
    deps = [
        ":api_lib",
        ":serialization",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_library(
    name = "graph_resolver_lib",
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/maven/*.java"]),
    runtime_deps = [
        "//resolver/main_deps/org/codehaus/plexus/plexus-interpolation",
        "//resolver/main_deps/org/codehaus/plexus/plexus-utils",
    ],
    deps = [
        ":api_lib",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
        "//resolver/main_deps/org/apache/httpcomponents/httpclient",
        "//resolver/main_deps/org/apache/httpcomponents/httpcore",
        "//resolver/main_deps/org/apache/maven/maven-aether-provider",
        "//resolver/main_deps/org/apache/maven/maven-artifact",
        "//resolver/main_deps/org/apache/maven/maven-model",
        "//resolver/main_deps/org/apache/maven/maven-model-builder",
        "//resolver/main_deps/org/apache/maven/maven-repository-metadata",
        "//resolver/main_deps/org/eclipse/aether/aether-api",
        "//resolver/main_deps/org/eclipse/aether/aether-connector-basic",
        "//resolver/main_deps/org/eclipse/aether/aether-impl",
        "//resolver/main_deps/org/eclipse/aether/aether-spi",
        "//resolver/main_deps/org/eclipse/aether/aether-transport-classpath",
        "//resolver/main_deps/org/eclipse/aether/aether-transport-file",
        "//resolver/main_deps/org/eclipse/aether/aether-transport-http",
        "//resolver/main_deps/org/eclipse/aether/aether-transport-wagon",
        "//resolver/main_deps/org/eclipse/aether/aether-util",
    ],
)

java_library(
    name = "migration_tooling_graph_resolver",
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/maven/adapter/*.java"]),
    deps = [
        ":api_lib",
        ":graph_resolver_lib",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/maven/maven-model",
    ],
)

java_library(
    name = "timing_lib",
    srcs = glob(["src/main/java/net/evendanan/timing/*.java"]),
    runtime_deps = [],
    deps = [
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
    ],
)

java_library(
    name = "api_lib",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/api/*.java"]),
    visibility = ["//visibility:public"],
    exports = [":api_model"],
    runtime_deps = [],
    deps = [
        ":api_model",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
    ],
)

java_library(
    name = "impl_lib",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/impl/*.java"]),
    resource_strip_prefix = "resolver/src/main/java/net/evendanan/bazel/mvn/impl",
    resources = [
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-header.bzl.template",
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-http-repo-rules.bzl.template",
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-sub-folder-header.bzl.template",
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-targets-macro.bzl.template",
    ],
    runtime_deps = [],
    deps = [
        ":api_lib",
        ":timing_lib",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
    ],
)

java_library(
    name = "merger",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/merger/*.java"]),
    deps = [
        ":api_lib",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
    ],
)

java_binary(
    name = "resolver_bin",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/Resolver.java"]),
    main_class = "net.evendanan.bazel.mvn.Resolver",
    visibility = ["//visibility:public"],
    runtime_deps = ["//resolver/main_deps/org/slf4j/slf4j-nop"],
    deps = [
        ":api_lib",
        ":impl_lib",
        ":migration_tooling_graph_resolver",
        ":serialization",
        ":timing_lib",
        "//resolver/main_deps/com/beust/jcommander",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
        "//resolver/main_deps/org/apache/maven/maven-model",
    ],
)

java_binary(
    name = "merger_bin",
    srcs = [
        "src/main/java/net/evendanan/bazel/mvn/CommandLineOptions.java",
        "src/main/java/net/evendanan/bazel/mvn/Merger.java",
    ],
    main_class = "net.evendanan.bazel.mvn.Merger",
    visibility = ["//visibility:public"],
    runtime_deps = ["//resolver/main_deps/org/slf4j/slf4j-nop"],
    deps = [
        ":api_lib",
        ":impl_lib",
        ":merger",
        ":serialization",
        ":timing_lib",
        "//resolver/main_deps/com/beust/jcommander",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
    ],
)

#### Tests below

java_library(
    name = "test_utils",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/TestUtils.java"],
    deps = [
        ":api_lib",
        "//resolver/main_deps/com/google/code/findbugs/jsr305",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/org/apache/commons/commons-lang3",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "timing_data",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/timing/TimingDataTest.java"],
    test_class = "net.evendanan.timing.TimingDataTest",
    deps = [
        ":timing_lib",
        "//resolver/main_deps/junit/junit",
    ],
)

java_test(
    name = "timing_timer",
    size = "small",
    srcs = [
        "src/main/javatest/net/evendanan/timing/TaskTimingTest.java",
        "src/main/javatest/net/evendanan/timing/TimingDataTest.java",
    ],
    test_class = "net.evendanan.timing.TaskTimingTest",
    deps = [
        ":timing_lib",
        "//resolver/main_deps/junit/junit",
    ],
)

java_test(
    name = "classifiers_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/impl/RuleClassifiersTest.java"],
    resource_strip_prefix = "resolver/src/main/javatest/net/evendanan/bazel/mvn/resourses/",
    resources = [
        "src/main/javatest/net/evendanan/bazel/mvn/resourses/dataenum-1.0.2.jar",
        "src/main/javatest/net/evendanan/bazel/mvn/resourses/dataenum-processor-1.0.2.jar",
        "src/main/javatest/net/evendanan/bazel/mvn/resourses/dataenum-processor-1.0.2-with-comments.jar",
        "src/main/javatest/net/evendanan/bazel/mvn/resourses/mockk-1.0.jar",
        "src/main/javatest/net/evendanan/bazel/mvn/resourses/mockk-1.0-for-android.aar",
        "src/main/javatest/net/evendanan/bazel/mvn/resourses/mockk-1.0-for-android.jar",
    ],
    test_class = "net.evendanan.bazel.mvn.impl.RuleClassifiersTest",
    deps = [
        ":api_lib",
        ":impl_lib",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "composite_formater_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/impl/CompositeFormatterTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.CompositeFormatterTest",
    deps = [
        ":api_lib",
        ":impl_lib",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "merger_tests",
    size = "small",
    srcs = [
        "src/main/javatest/net/evendanan/bazel/mvn/merger/DefaultMergerTest.java",
        #GraphUtilsTest is needed because it has some utility functions
        "src/main/javatest/net/evendanan/bazel/mvn/merger/GraphUtilsTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.DefaultMergerTest",
    deps = [
        ":api_lib",
        ":merger",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "latest_version_merger_tests",
    size = "small",
    srcs = [
        "src/main/javatest/net/evendanan/bazel/mvn/merger/LatestVersionMergerTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.LatestVersionMergerTest",
    deps = [
        ":api_model",
        ":merger",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "version_compare_tests",
    size = "small",
    srcs = [
        "src/main/javatest/net/evendanan/bazel/mvn/merger/VersionComparatorTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.VersionComparatorTest",
    deps = [
        ":merger",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "public_category_tests",
    size = "small",
    srcs = [
        "src/main/javatest/net/evendanan/bazel/mvn/merger/PublicTargetsCategoryTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.PublicTargetsCategoryTest",
    deps = [
        ":api_lib",
        ":merger",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "downloader_tests",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/merger/ArtifactDownloaderTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.ArtifactDownloaderTest",
    deps = [
        ":api_lib",
        ":merger",
        "//resolver:com_google_guava__guava",
        "//resolver/main_deps/junit/junit",
    ],
)

java_test(
    name = "graph_util_tests",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/merger/GraphUtilsTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.GraphUtilsTest",
    deps = [
        ":api_lib",
        ":merger",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "graph_checks_tests",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/merger/GraphVerificationsTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.GraphVerificationsTest",
    deps = [
        ":api_lib",
        ":merger",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "formatters_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/impl/FormattersTests.java"],
    test_class = "net.evendanan.bazel.mvn.impl.FormattersTests",
    deps = [
        ":api_lib",
        ":impl_lib",
        ":test_utils",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "target_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/impl/TargetTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.TargetTest",
    deps = [":api_lib"],
)

java_test(
    name = "dependency_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/impl/DependencyToolsTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.DependencyToolsTest",
    deps = [
        ":api_lib",
        "//resolver/main_deps/junit/junit",
    ],
)

java_test(
    name = "real_writers_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/impl/WritersTests.java"],
    test_class = "net.evendanan.bazel.mvn.impl.WritersTests",
    deps = [
        ":api_lib",
        ":impl_lib",
        ":test_utils",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "graph_resolver_lib_test",
    size = "small",
    srcs = ["src/main/javatest/com/google/devtools/bazel/workspace/maven/ArtifactBuilderTest.java"],
    test_class = "com.google.devtools.bazel.workspace.maven.ArtifactBuilderTest",
    deps = [
        ":graph_resolver_lib",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/apache/maven/maven-model",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)

java_test(
    name = "sources_locator_test",
    size = "small",
    srcs = ["src/main/javatest/net/evendanan/bazel/mvn/merger/SourcesLocatorTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.SourcesLocatorTest",
    deps = [
        ":api_lib",
        ":merger",
        "//resolver/main_deps/com/google/guava/guava",
        "//resolver/main_deps/junit/junit",
        "//resolver/main_deps/org/mockito/mockito-core",
    ],
)
